<resources>
    <string name="app_name">Dr Chella MD.,</string>
    <string name="splash_name">Dr.Chella</string>
    <string name="studies">M.D.,</string>
    <string name="registration">Registration</string>
    <string name="tamil_registration">பதிவு செய்தல்</string>
    <string name="Name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="mobile">Mobile number</string>
    <string name="e_mail">E-Mail</string>
    <string name="register">Register</string>
    <string name="tamil_register">பதிவு</string>
    <string name="allfield">All fields are mandatory</string>
    <string name="tamil_allfield">அனைத்து தகவலும் கட்டாயம்</string>

    <string name="str1">We have sent verification code to your registered Mobile number</string>
    <string name="tamil_str1">உங்கள் பதிவு செய்யப்பட்ட மொபைல் எண்ணுக்கு சரிபார்ப்புக் குறியீட்டை அனுப்பியுள்ளோம்</string>
    <string name="submit">SUBMIT</string>
    <string name="tamil_submit">சமர்ப்பிக்க</string>


    <string name="date_and_time">Date &amp;Time</string>
    <string name="tamil_date_and_time">தேதி &amp;நேரம்</string>
    <string name="booking_details">Booking Details</string>
    <string name="tamil_booking_details">பதிவு விவரங்கள்</string>
    <string name="conformation">Confirmation</string>
    <string name="tamil_conformation">உறுதிப்படுத்தல்</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_city">Please Select Your City</string>
    <string name="tamil_select_city">உங்கள் நகரத்தை தேர்வு செய்யவும்</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>

    <string name="tamil_name">பெயர்:</string>
    <string name="english_name">Name:</string>
    <string name="tamil_age">வயது:</string>
    <string name="english_age">Age:</string>
    <string name="tamil_gender">பாலினம்:</string>
    <string name="tamil_gender1">பாலினம்</string>
    <string name="english_gender">Gender:</string>
    <string name="tamil_female">பெண்</string>
    <string name="english_female">Female</string>
    <string name="tamil_male">ஆண்</string>
    <string name="english_male">Male</string>
    <string name="tamil_transgender">திருநங்கை</string>
    <string name="english_transgender">Transgender</string>
    <string name="tamil_patient_mobile">நோயாளியின் கைப்பேசி எண்:</string>
    <string name="english_patient_mobile">Patient Mobile Number:</string>
    <string name="english_patient_mobile1">Patient Mobile Number</string>
    <string name="tamil_applicant_mobile">விண்ணப்பதாரர் கைப்பேசி எண்:</string>
    <string name="english_applicant_mobile">Applicant Mobile Number:</string>
    <string name="english_applicant_mobile1">Applicant Mobile Number</string>
    <string name="english_place">Place:</string>
    <string name="english_place1">Place</string>
    <string name="tamil_place">இடம்:</string>
    <string name="english_e_mail">Email-id:</string>
    <string name="english_e_mail1">Email id</string>
    <string name="tamil_e_mail">மின்னஞ்சல் முகவரி்:</string>
    <string name="english_address">Short address:</string>
    <string name="english_address1">Short address</string>
    <string name="tamil_address">முகவரி:</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="mr">Mr</string>
    <string name="mrs">Mrs</string>
    <string name="ms">Ms</string>
    <string name="dr">Dr</string>
    <string name="er">Er</string>
    <string name="title">Title</string>

    <string name="country_prompt">Choose a country</string>


    <string name="next">Next</string>
    <string name="tamil_next">அடுத்த</string>
    <string name="previous">Previous</string>
    <string name="tamil_city">நகரம்</string>
    <string name="tamil_mobile_number">கைப்பேசி எண்</string>
    <string name="tamil_name1">பெயர்</string>
    <string name="tamil_age1">வயது</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="tamil_resend_otp">மீண்டும் அனுப்பி OTP</string>
    <string name="tamil_book_appointment">பதிவை உறுதி செய்யவும்</string>
    <string name="book_appointment">Book Your Appointment</string>
    <string name="tamil_applicant_mobile1">விண்ணப்பதாரர் கைப்பேசி எண்</string>
    <string name="tamil_patient_mobile1">நோயாளியின் கைப்பேசி எண்</string>
    <string name="tamil_place1">இடம்</string>
    <string name="tamil_e_mail1">மின்னஞ்சல் முகவரி்</string>
    <string name="tamil_address1">குறுகிய முகவரி</string>
    <string name="tamil_previous">முந்தைய</string>
    <string-array name="country_arrays">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Dr</item>
        <item>Er</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Tamil</item>
    </string-array>

    <!--time slot-->

    <string name="tamil_cancel">ரத்து</string>
    <string name="tamil_conform">உறுதி</string>
    <!--order summary-->
    <string name="chella_dr_app">Dr. Chellakumarasamy MD.,</string>
    <string name="con">Appointment Confirmation</string>
    <string name="tamil_chella_dr_app">டாக்டர். செல்லகுமாரசாமி MD.,</string>
    <string name="tamil_chella_dr_app1">பதிவு உறுதிப்படுத்தல்</string>
    <string name="date">Date</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="tamil_hospital_name">மருத்துவமனை பெயர்</string>
    <string name="time">Time</string>
    <string name="tamil_date">தேதி</string>
    <string name="tamil_time">நேரம்</string>

    <!--hospital-->
    <string name="erode_hospital">URC Hospital, Erode</string>
    <string name="coimbatore_hospital">Geneomm Hospital, Coimbatore</string>
    <string name="namakkal_hospital">MM Hospital, Namakkal</string>
    <string name="mayiladu_hospital">Sai Medical Centre, Mayiladudurai</string>
    <string name="kollidam_hospital">URC Hospital, Kollidam</string>
    <string name="chennai_hospital">Medway Medical Centre, Chennai</string>

    <string name="tamil_erode_hospital">URC ஹாஸ்பிடல்</string>
    <string name="tamil_coimbatore_hospital">Geneomm ஹாஸ்பிடல்</string>
    <string name="tamil_namakkal_hospital">MM ஹாஸ்பிடல்</string>
    <string name="tamil_mayiladu_hospital">Sai மெடிக்கல் சென்டர் </string>
    <string name="tamil_kollidam_hospital">Sai மெடிக்கல் சென்டர் </string>
    <string name="tamil_chennai_hospital">Medway மெடிக்கல் சென்டர் </string>


    <string name="patient_details">Patient Details</string>
    <string name="tamil_patient_details">நோயாளி விவரங்கள்</string>
    <string name="conformation_of_your">Confirmation Of Your Appointment</string>
    <string name="tamil_conformation_of_your">உங்கள் பதிவு உறுதிப்படுத்தல்</string>
    <string name="info_description">Do you want to cancel the Appointment ?</string>
    <string name="tamil_info_description">பதிவு ரத்து செய்ய வேண்டுமா ?</string>
    <string name="tamil_ok_button">சரி</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="remaining">day(s) remainig of your appointment</string>

    <!--hospital address-->
    <string name="erode_hospital_address">No: 12/29, Sate Bank Road, Opp.South Indian Bank, Erode - 638001</string>
    <string name="erode_hospital_Phone">Phone No: +91 7373456666</string>
    <string name="chennai_hospital_address">No: 26/1, United India Colony, Kodambakkam, Chennai - 600024</string>
    <string name="chennai_hospital_Phone">Phone No: +91 7373456666</string>
    <string name="coimbatore_hospital_address">No: 320, Selva Towers, Avinashi Road, Next to FUN MALL, Pellamedu, Coimbatore - 641004.</string>
    <string name="coimbatore_hospital_Phone">Phone No: 7373146666</string>
    <string name="namakkal_hospital_address">No: 6/288, Tiruchy Road, Namakkal - 637001</string>
    <string name="namakkal_hospital_Phone">Phone No: +91 97866505 75</string>
    <string name="may_hospital_address">Dr. Kaviarasan Clinic, Opp. to GH, Mayiladuthurai, Nagai - 609001</string>
    <string name="may_hospital_Phone">Phone No: +91 7373456666</string>
    <string name="kollidam_hospital_address">3/126, Main Road,Opp. Police Station, Kollidam, Nagai - 609102</string>
    <string name="kollidam_hospital_Phone">Phone No: +91 9655929498</string>`


    <string name="no_appointment"> Would you like to have an Appointment ? </string>
    <string name="title_activity_view_appointment">ViewAppointmentActivity</string>
    <string name="comming_soon">Coming Soon...</string>

    <string name="dr_chella1">Dr. T. S. Chellakumarasamy</string>
    <string name="dr_chella2">MBBS., DPMR., MD(PMR)., FIPM.,</string>
    <string name="dr_chella3">Consultant PHYSIATRIST,</string>
    <string name="dr_chella4">(Physical Medicine  &amp; Rehabilitation Specialist)</string>
    <string name="dr_chella5">URC Hospitals, ERODE. </string>
    <string name="title_activity_maps">Map</string>

    <string name="map_chennai_address">26/1,United India Colony,Kodambakkam,Chennai,Tamil Nadu</string>
    <string name="map_erode_address">U.R.C. Hospital,Surampattivalasu,Erode,Tamil Nadu</string>
    <string name="map_coimbatore_address">Selva Towers,Next to Fun Mall,Avinashi Road,Peelamedu,Coimbatore</string>
    <string name="map_namakkal_address">M.M. Hospital,Andavar Nagar,Namakkal,Tamil Nadu</string>
    <string name="map_mayiladudurai_address">Dr. Kaviarasan Clinic,Opp.to GH,Mayiladuthurai,Nagai District</string>
    <string name="map_kolidam_address">3/126,Main Road,Opp. Police Station,Kollidam,Nagai Dt</string>

    <string name="no_video">To be uploaded..</string>

    <string name="text_mobile_number">We sent mobile and E_Mail Validation, Please update below the fields</string>
    <string name="title_activity_history">HistoryActivity</string>
</resources>
