<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/book_title"
                android:id="@+id/txtToolbarText"
                android:text="@string/tamil_book_appointment"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/ldtCity">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/white"
                    android:textSize="@dimen/edit_text_size"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:id="@+id/txttimer" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/white"
                    android:textSize="@dimen/city_txt"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:id="@+id/txtCity" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F28F20"
                android:id="@+id/ldtDateTime">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tamil_date_and_time"
                style="@style/booking_style"
                android:textColor="@android:color/white"
                android:id="@+id/txtDateTime"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ldtBookingDetails" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamil_booking_details"
                style="@style/booking_style"
               android:id="@+id/txtBooking"
               />
                </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ldtConformation" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tamil_conformation"
                style="@style/booking_style"
                android:id="@+id/txtConformation"/>
                </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        </FrameLayout>
    </LinearLayout>
</ScrollView>
